registry/argocd/components/vault/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  virtualhost:
    fqdn: vault.homelab.io
    tls:
      passthrough: true
  tcpproxy:
    services:
      - name: vault
        port: 443
  routes:
    - conditions:
      - prefix: /
      services:
        - name: vault
          port: 80
